# ECHMETCoreLibs

./: .ycm_extra_conf.py  CMakeLists.txt  Doxyfile  README.md  mkcc.sh  toolchain_mingw_lnx.cmake
libCAES/: .ycm_extra_conf.py  CMakeLists.txt
libCAES/include/: echmetcaes.h  echmetcaes_extended.h
libCAES/src/: caes.cpp  caes.hpp  caes_extended.cpp  caes_extended.hpp  caes_extended_p.h  caes_p.h  chargesummer.h  chargesummer_avx.cpp  chargesummer_avx512.cpp  chargesummer_fma3.cpp  chargesummer_sse2.cpp  cpufeatures.cpp  cpufeatures.h  estimator_helpers.h  estimator_helpers.hpp  estimator_helpers_avx.cpp  estimator_helpers_avx512.cpp  estimator_helpers_fma3.cpp  estimator_helpers_impl.hpp  estimator_helpers_sse2.cpp  funcs.h  genericmath.h  mappedmatrix.h  solvercontext.h  solvercontextimpl.cpp  solvercontextimpl.h  solvercontextimpl.hpp  solverimpl.cpp  solverimpl.hpp  solverinternal.cpp  solverinternal.h  solverinternal.hpp  solverinternal_avx.cpp  solverinternal_avx512.cpp  solverinternal_fma3.cpp  solverinternal_sse2.cpp  totalequilibrium.h  totalequilibrium.hpp  totalequilibrium_avx.cpp  totalequilibrium_avx512.cpp  (+5 more)
libCAES/src/internals/: newtonraphson.h  newtonraphson.hpp  newtonraphson_avx.cpp  newtonraphson_avx512.cpp  newtonraphson_fma3.cpp
libCAES/src/vecmath/: vecmath.cpp  vecmath.h  vecmath_avx.cpp  vecmath_avx512.cpp  vecmath_fma3.cpp  vecmath_sse2.cpp
libECHMETShared/: CMakeLists.txt  echmetcorelibs_config.h.in  echmetelems.h  echmetmath.h  echmetmodule.h  echmetphchconsts.h
libECHMETShared/containers/: echmetfixedstring_p.h  echmetskmap_p.h  echmetvec_p.h
libECHMETShared/internal/: cpufeatures.cpp  cpufeatures.h  cpufeatures_common.cpp  cpufeatures_generic.cpp  cpufeatures_x86.cpp  echmetelems.cpp  echmetmath.cpp  echmetmath_internal.h  initializers.cpp  mpreal.h  phchconsts.cpp  phchconsts_calcs.hpp
libIonProps/: CMakeLists.txt
libIonProps/include/: echmetionprops.h  echmetionprops_extended.h
libIonProps/src/: ionprops.cpp  ionprops.hpp  ionprops_p.h  ionprops_workers.hpp
libSysComp/: CMakeLists.txt
libSysComp/include/: echmetsyscomp.h
libSysComp/src/: syscomp.cpp  syscomp_p.h
testing/: build_ref_tool.sh  cpuCheck.cpp  dbg_run_ref_tool.sh  json_input_processor.cpp  json_input_processor.h  mk_cpuCheck.sh  profile_run_ref_tool.sh  ref_tool.cpp  ref_tool_glob.sh  run_all_tests.sh  run_ref_tool.sh  run_ref_tool_valgrind.sh
testing/jsonloader/: constituents_json_ldr.c  constituents_json_ldr.h  expected_json_ldr.c  expected_json_ldr.h  inputreader.cpp  inputreader.h  json_ldr.h  json_ldr_util.c  json_ldr_util.h
testing/testdata/: benzoic_alone.json  benzoic_li_bCD.json  benzoic_li_nocpx.json  benzoic_too_low.json  cystine_alone.json  empty.json  hcl_benzoic.json  inert.json  isoleucine_alone.json  li_benzoic_nocpx.json  oxalic_alone.json  pzychomix.json  pzychomix_mod.json  sodium_alone.json
